--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Home", root_path %>
 <%= link_to "About Me", pages_about_path %>
 <%= link_to "Request a Quote", new_quote_path %>
-<%= link_to "#{current_user.name}", edit_user_registration_path %>
-<%= link_to "Log Out", destroy_user_session_path %>
+<%= link_to "#{current_user.name}", edit_user_registration_path if user_signed_in? %>
+<%= link_to "Log Out", destroy_user_session_path, method: :delete if user_signed_in?  %>
 
