Finished petergate and implimented styling with bootstrap4.

--- a/app/views/quotes/_quotes.html.erb
+++ b/app/views/quotes/_quotes.html.erb
@@ -1,3 +1,7 @@
 
 
-<p><%= link_to quotes.name, quote_show_path(quotes) %></p>
+<p><%= link_to quotes.name, quote_show_path(quotes) %>
+<%= quotes.phone %>
+<%= quotes.email %>
+<%= quotes.city %>
+<%= quotes.body %></p>
