--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,32 +1,38 @@
+<div class="card text-center" style="width: 40rem;">
+  <div class="card-block">
+
+
 <%= form_with(model: @quotes, local: true) do |f| %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
- <div class="field">
+ <div class="form-group">
     <%= f.label :phone %>
-    <%= f.telephone_field :phone %>
+    <%= f.telephone_field :phone, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :city %>
-    <%= f.text_field :city %>
+    <%= f.text_field :city, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+  <div class="form-group">
+    <%= f.label :Comments %>
+    <%= f.text_area :body, class: "form-control" %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Request Quote", class: "btn btn-primary" %>
   </div>
 
   <% end %>
+  </div>
+  </div>
