--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,14 @@
-<%= link_to "Home", root_path %>
-<%= link_to "About Me", pages_about_path %>
-<%= link_to "Request a Quote", new_quote_path %>
-<%= link_to "#{current_user.name}", edit_user_registration_path if user_signed_in? %>
-<%= link_to "Log Out", destroy_user_session_path, method: :delete if user_signed_in?  %>
+
+<div class="masthead clearfix">
+  <div class="inner">
+    <h3 class="masthead-brand">Year Round Window Cleaning</h3>
+    <nav class="nav nav-masthead">
+      <%= link_to "Home", root_path, class: "nav-link active" %>
+      <%= link_to "About Me", pages_about_path, class: "nav-link" %>
+      <%= link_to "Request a Quote", new_quote_path, class: "nav-link" %>
+      <%= login_helper("nav-link") %>
+    </nav>
+  </div>
+</div>
+
 
