Added kaminari for pagination. created files but not yet implimented.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,3 +4,28 @@
   <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
   <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-secondary" %></p>
 </div>
+
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <p><quote><em>"Review from a very satisfied customer. We will get nice things even if we have to beat it out of them."</em></quote></p>
+    </div>
+    <div class="carousel-item">
+      <p><quote><em>"Review number 2 from a yet another satisfied customer. All good things."</em></quote></p>
+    </div>
+    <div class="carousel-item">
+      <p><quote><em>"Yet another person who loves watching birds hit their windows."</em></quote></p>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
