--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -3,7 +3,8 @@
 
 
 <%= form_with(model: @quotes, local: true) do |f| %>
-
+<div class="row">
+<div class="col-md-7">
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %>
@@ -23,14 +24,18 @@
     <%= f.label :city %>
     <%= f.text_field :city, class: "form-control" %>
   </div>
+  </div>
 
+  <div class="col-md-5">
   <div class="form-group">
     <%= f.label :Comments %>
-    <%= f.text_area :body, class: "form-control" %>
+    <%= f.text_area :body, class: "form-control", rows: 14 %>
+  </div>
+  </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Request Quote", class: "btn btn-primary" %>
+    <%= f.submit "Request Quote", class: "btn btn-primary btn-block" %>
   </div>
 
   <% end %>
