--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,7 @@
-<div class="mastfoot">
-  <div class="inner">
-    <p>© 2017 | Colton Mathews | All Rights Reserved</p>
+<div class="mastfoot" id="<%= @fixed_pos %>" >
+  <div class="inner" >
+    <div class="copyright">
+      <p><%= set_copyright %></p>
+    </div>
   </div>
 </div>
