--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,9 @@ body {
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
           box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+  background-image: url('https://img.grouponcdn.com/deal/9pLv518PPxqCR9gUCK4/Eg-440x267/v1/c700x420.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -170,6 +173,7 @@ body {
   color: black;
   text-align: left;
   border: 0px;
+  text-shadow: none;
 
 }
 
@@ -184,5 +188,53 @@ body {
 .card {
   margin-top: 60px;
   border: none;
+  margin-left: 15em;
 
+}
+
+.carousel-inner {
+  margin-top: 150px;
+  opacity: 0.5;
+}
+
+.carousel-item{
+  padding-left: 250px;
+  padding-right: 250px;
+
+  }
+
+.request {
+text-align: left;
+}
+
+.request-meta {
+  color: #4E5044;
+  text-shadow: none;
+}
+
+.about-pic {
+float: right;
+
+}
+
+.about-txt {
+float: left;
+}
+
+.copyright {
+  font-size: 10px;
+  text-shadow: none;
+}
+
+.nav-text {
+  font-size: 10px;
+  text-shadow: none;
+}
+
+#fixed-pos {
+position: static;
+}
+
+#small {
+  margin-bottom: 0px;
 }
