--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
-<h1>About ME</h1>
+<div class="row">
+  <div class="col-md-5">
+    <div class="about-pic">
+      <img src="http://via.placeholder.com/250x200">
+    </div>
+  </div>
+  <div class="col-md-7">
+    <div class="about-txt">
+      <p>Something interesting about Adam.</p>
+    </div>
+  </div>
+</div>
 
