--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,13 +1,17 @@
 
-<div class="masthead clearfix">
+<div class="masthead clearfix" id="<%= @fixed_pos %>">
   <div class="inner">
-    <h3 class="masthead-brand">Year Round Window Cleaning</h3>
-    <nav class="nav nav-masthead">
-      <%= link_to "Home", root_path, class: "nav-link active" %>
-      <%= link_to "About Me", pages_about_path, class: "nav-link" %>
-      <%= link_to "Request a Quote", new_quote_path, class: "nav-link" %>
-      <%= login_helper("nav-link") %>
-    </nav>
+    <h2 class="masthead-brand">Year Round Window Cleaning</h2>
+    <div class="nav-class" >
+      <nav class="nav nav-masthead">
+
+          <%= link_to "Home", root_path, class: "nav-link #{active? root_path}" %>
+          <%= link_to "About Me", about_me_path, class: "nav-link #{active? about_me_path}" %>
+          <%= link_to "Request a Quote", new_quote_path, class: "nav-link #{active? new_quote_path}" %>
+          <%= login_helper("nav-link") %>
+
+      </nav>
+    </div>
   </div>
 </div>
 
