--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,3 +238,12 @@ position: static;
 #small {
   margin-bottom: 0px;
 }
+
+.pagination {
+  justify-content: center;
+}
+
+
+.pagination > li {
+  margin-right: 10px;
+}
