--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -1,3 +1,1 @@
-<li class='page-item disabled'>
-  <%= link_to raw(t 'views.pagination.truncate'), '#', class: 'page-link' %>
-</li>
+<li aria-hidden="true" class="ellipsis"></li>
