--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #648cb7;
+  background-color: black;
 }
 body {
   color: #fff;
@@ -38,6 +38,7 @@ body {
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
+
 .site-wrapper {
   display: table;
   width: 100%;
@@ -46,6 +47,7 @@ body {
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
           box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
   background-image: url('https://img.grouponcdn.com/deal/9pLv518PPxqCR9gUCK4/Eg-440x267/v1/c700x420.jpg');
+  background-clip: url('assets/videos/high_lines.mp4');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -246,4 +248,12 @@ position: static;
 
 .pagination > li {
   margin-right: 10px;
+}
+
+.mailer > p {
+  font-size: 15px;
+  color: black;
+  font-family: sans-serif;
+  margin-top: 7px;
+  padding-right: 5px;
 }
