Stying about me and home page.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,16 @@
 <div class="row">
-  <div class="col-md-5">
-    <div class="about-pic">
-      <img src="http://via.placeholder.com/250x200">
-    </div>
+<div class="col-md-2">
+</div>
+  <div class="col-md-4">
+      <p><%= image_tag "family.jpg", class: "about-pic" %></p>
   </div>
-  <div class="col-md-7">
-    <div class="about-txt">
-      <p>Something interesting about Adam.</p>
-    </div>
+
+  <div class="col-md-3" id="about-txt">
+    <div>
+      <p>I have called Utah home for the last 18 years. I currently reside in Saratoga Springs with my lovely wife of 11 years. We have 2 shar-pei dogs and we love to be out doors.</p><p> Camping, hiking, and fly fishing are a few of my favorite past times. </p><p>It makes sense that I would end up in a profession that allows me to be outside all day. I am passionate about what I do and can’t wait to meet you!</p>
   </div>
+  <div class="col-md-3">
+  </div>
+
 </div>
 
