--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,32 @@
 
+<div class="middle-page">
 <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-  <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-secondary" %></p>
+  <div class="row">
+  <div class="col-md-4"><%= image_tag 'yrw3.jpg' , class: "home-pic" %></div>
+  <div class="col-md-7 home-txt">
+  <p class="lead">Year-Round Window Cleaning is a first-class operation where the customer is my priority. I offer free estimates, flexible hours, hard water removal and a 48-hour weather guarantee for my quarterly residential clients. I offer one time cleaning services, or we can put you on a quarterly, half-yearly, or annual cleaning schedule, so your windows stay clean throughout the year.</p>
+  <br>
+  <p class="lead">I have impeccable attention to detail so your windows come out streak free and sparkling clean every time. I work on word-of-mouth referrals, so anything less than results you would rave to your friends and family about is unacceptable.</p>
+  <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-outline-secondary" %></p>
+  </div>
+  <div class="col-md-1"></div>
+  </div>
 </div>
 
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <p><quote><em>"Review from a very satisfied customer. We will get nice things even if we have to beat it out of them."</em></quote></p>
+      <p><quote><em>"Very quick and tidy leaving no water drops...only very clean windows. I've become on of his regulars, he'll be back in three months to clean the outside windows." - Bonnie</em></quote></p>
     </div>
     <div class="carousel-item">
-      <p><quote><em>"Review number 2 from a yet another satisfied customer. All good things."</em></quote></p>
+      <p><quote><em>"My wife and I always joke that our windows are "High Definition" after Adam gets done!" - Fax</em></quote></p>
     </div>
     <div class="carousel-item">
-      <p><quote><em>"Yet another person who loves watching birds hit their windows."</em></quote></p>
+      <p><quote><em>"Adam was very professional and efficient. He showed up on time and my windows have never looked better! I have him coming back every 3 months. Completely worth it. I would recommend him to anyone." - Chris</em></quote></p>
+    </div>
+    <div class="carousel-item">
+      <p><quote><em>"Adam came and cleaned the interior and exterior of my windows and they are sparkly clean with zero streaks or parks. Perfect in every way! Thank you for being a perfectionist!!!" - Julie</em></quote></p>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -26,6 +37,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
 </div>
 
 
