--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: black;
+/*  background-color: black;*/
 }
 body {
   color: #fff;
@@ -46,10 +46,10 @@ body {
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
           box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-  background-image: url('https://img.grouponcdn.com/deal/9pLv518PPxqCR9gUCK4/Eg-440x267/v1/c700x420.jpg');
+/*  background-image: url('https://img.grouponcdn.com/deal/9pLv518PPxqCR9gUCK4/Eg-440x267/v1/c700x420.jpg');
   background-clip: url('assets/videos/high_lines.mp4');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover;*/
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -170,16 +170,31 @@ body {
  * Custom Styles
  */
 
+ .cover-container {
+  justify-content: left;
+}
+
+#background {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+  background-color: black;
+}
+
  .card-block {
  background-color: white;
   color: black;
   text-align: left;
   border: 0px;
   text-shadow: none;
-
-}
-
-.auth-links a {
 
 }
 
@@ -195,8 +210,7 @@ body {
 }
 
 .carousel-inner {
-  margin-top: 150px;
-  opacity: 0.5;
+  opacity: 1;
 }
 
 .carousel-item{
@@ -250,10 +264,31 @@ position: static;
   margin-right: 10px;
 }
 
-.mailer > p {
-  font-size: 15px;
-  color: black;
-  font-family: sans-serif;
-  margin-top: 7px;
-  padding-right: 5px;
+
+.about-pic {
+  margin-left: 5em;
+border-radius: 20px;
+width: 80%;
 }
+
+#about-txt {
+  justify-content: center;
+
+}
+
+.home-txt{
+  margin-top: 5em;
+}
+
+.home-pic {
+  width: 100%;
+  margin-top: 5em;
+  border-radius: 20px;
+
+}
+.middle-page{
+  margin-top: -22.5em;
+  margin-bottom: 10em;
+  position: absolute;
+}
+
