--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
   <body>
 
     <div class="site-wrapper">
+            <%= video_tag('high_lines.mp4',
+        id: 'background',
+        autoplay: true,
+        loop: true,
+        muted: true) %>
       <div class="site-wrapper-inner">
         <div class="cover-container">
+
           <p class="notice"><%= notice %></p>
           <p class="alert"><%= alert %></p>
           <%= render 'shared/nav' %>
