--- a/app/views/model_mailer/new_request_notification.html.erb
+++ b/app/views/model_mailer/new_request_notification.html.erb
@@ -1,3 +1,13 @@
+<style>
+.mailer > p {
+  font-size: 15px;
+  color: black;
+  font-family: sans-serif;
+  margin-top: 7px;
+  padding-right: 5px;
+}
+</style>
+
 <h1>New Quote Request</h1>
 <div>
 <h3>
