Implimented .ENV and applied to mailgun credentials. Worked on Styles.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,9 @@
   <p class="lead">Year-Round Window Cleaning is a first-class operation where the customer is my priority. I offer free estimates, flexible hours, hard water removal and a 48-hour weather guarantee for my quarterly residential clients. I offer one time cleaning services, or we can put you on a quarterly, half-yearly, or annual cleaning schedule, so your windows stay clean throughout the year.</p>
   <br>
   <p class="lead">I have impeccable attention to detail so your windows come out streak free and sparkling clean every time. I work on word-of-mouth referrals, so anything less than results you would rave to your friends and family about is unacceptable.</p>
-  <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-outline-secondary" %></p>
+  <hr>
+  <p> Phone Number   |    Email </p>
+  <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-danger" %></p>
   </div>
   <div class="col-md-1"></div>
   </div>
