--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,10 +46,10 @@ body {
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
           box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-/*  background-image: url('https://img.grouponcdn.com/deal/9pLv518PPxqCR9gUCK4/Eg-440x267/v1/c700x420.jpg');
+  background-image: url('https://www.glasssolutionsnc.com/wp-content/uploads/2015/05/Clear-Glass-with-Water-Drops-on-Top.jpg');
   background-clip: url('assets/videos/high_lines.mp4');
   background-repeat: no-repeat;
-  background-size: cover;*/
+  background-size: cover;
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -174,27 +174,13 @@ body {
   justify-content: left;
 }
 
-#background {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  background-size: cover;
-  background-color: black;
-}
-
  .card-block {
  background-color: white;
   color: black;
   text-align: left;
   border: 0px;
   text-shadow: none;
+  border-radius: 40px;
 
 }
 
@@ -205,7 +191,6 @@ body {
 .card {
   margin-top: 60px;
   border: none;
-  margin-left: 15em;
 
 }
 
@@ -266,24 +251,28 @@ position: static;
 
 
 .about-pic {
-  margin-left: 5em;
 border-radius: 20px;
-width: 80%;
+width: 100%;
 }
 
 #about-txt {
+  text-align: center;
+  margin-top: 150px;
   justify-content: center;
+  color: black;
 
 }
 
 .home-txt{
-  margin-top: 5em;
+  margin-top: 10em;
+  color: black;
 }
 
 .home-pic {
   width: 100%;
   margin-top: 5em;
   border-radius: 20px;
+
 
 }
 .middle-page{
