--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -225,6 +225,8 @@ float: left;
 .copyright {
   font-size: 10px;
   text-shadow: none;
+  position: absolute;
+  padding-left: 350px;
 }
 
 .nav-text {
@@ -277,7 +279,11 @@ width: 100%;
 }
 .middle-page{
   margin-top: -22.5em;
-  margin-bottom: 10em;
   position: absolute;
 }
-
+.email {
+  color: black;
+}
+.email:hover {
+  font-size: 1.2em;
+}
