updated email link on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
   <br>
   <p class="lead">I have impeccable attention to detail so your windows come out streak free and sparkling clean every time. I work on word-of-mouth referrals, so anything less than results you would rave to your friends and family about is unacceptable.</p>
   <hr>
-  <p class="email btn quiet-btn"> 801-995-8792  |    <a href="mailto:Yearroundwindow@gmail" class="email" >Yearroundwindow@gmail</a> </p>
+  <p class="contact btn quiet-btn"> 801-995-8792  |    <a href="mailto:Yearroundwindow@gmail" class="email" >Yearroundwindow@gmail</a> </p>
   <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-danger" %></p>
   </div>
   <div class="col-md-1"></div>
