implimented invisisible captcha on the quotes form to avoid spam.

--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -3,6 +3,7 @@
 
 
 <%= form_with(model: @quotes, local: true) do |f| %>
+<%= f.invisible_captcha :subtitle %>
 <div class="row">
 <div class="col-md-7">
   <div class="form-group">
