--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="site-wrapper-inner">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
-        <div class="cover-container">
+        <div class="container">
 
 
           <%= render 'shared/nav' %>
