--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="mastfoot" id="<%= @fixed_pos %>" >
-  <div class="inner" >
+<div class="mastfoot cust-foot" id="<%= @fixed_pos %>" >
+  <div class="inner">
     <div class="copyright">
       <p><%= set_copyright %></p>
     </div>
