--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,54 @@
 
 <div class="middle-page">
-<div class="inner cover">
-  <div class="row">
-  <div class="col-md-4"><%= image_tag 'yrw3.jpg' , class: "home-pic" %></div>
-  <div class="col-md-7 home-txt">
-  <p class="lead">Year-Round Window Cleaning is a first-class operation where the customer is my priority. I offer free estimates, flexible hours, hard water removal and a 48-hour weather guarantee for my quarterly residential clients. I offer one time cleaning services, or we can put you on a quarterly, half-yearly, or annual cleaning schedule, so your windows stay clean throughout the year.</p>
-  <br>
-  <p class="lead">I have impeccable attention to detail so your windows come out streak free and sparkling clean every time. I work on word-of-mouth referrals, so anything less than results you would rave to your friends and family about is unacceptable.</p>
-  <hr>
-  <p class="contact btn quiet-btn">Adam Healey  |  801-995-8792   |    <a href="mailto:yearroundwindow@gmail.com" class="email" >yearroundwindow@gmail.com</a> </p>
-  <p class="lead"><%= link_to "Request a Quote", new_quote_path, class: "btn btn-danger" %></p>
+  <div class="inner cover">
+    <div class="card">
+      <div class="card-block">
+        <div class="row">
+          <div class="col-md-5">
+            <%= image_tag 'yrw3.jpg' , class: "home-pic" %>
+          </div>
+          <div class="col-md-7">
+            <p class="lead">Year-Round Window Cleaning is a first-class operation where the customer is my priority. I offer free estimates, flexible hours, hard water removal and a 48-hour weather guarantee for my quarterly residential clients. I offer one time cleaning services, or we can put you on a quarterly, semi-annual, or annual cleaning schedule. Your windows can stay clean throughout the year with minimal effort from you.</p>
+            <br>
+            <p class="lead">I have impeccable attention to detail so your windows come out streak free and sparkling clean every time. I work on word-of-mouth referrals, so anything less than results you would rave to your friends and family about is unacceptable.</p>
+            <hr>
+            <div class="col-md-6 lead contact">
+              <p> Adam Healey</p>
+              <p> 801-995-8792 </p>
+              <p><a href="mailto:yearroundwindow@gmail.com" class="email">yearroundwindow@gmail.com</a></p>
+            </div>
+            <div class="col-md-6 lead request-quote">
+              <%= link_to "Request a Quote", new_quote_path, class: "btn btn-warning btn-block" %>
+            </div>    
+          </div>
+        </div>
+      </div>
+      <div id="carouselIndicators" class="carousel slide car-cust" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <em>"Very quick and tidy leaving no water drops...only very clean windows. I've become on of his regulars, he'll be back in three months to clean the outside windows." - Bonnie</em>
+          </div>
+          <div class="carousel-item ">
+            <em>"My wife and I always joke that our windows are "High Definition" after Adam gets done!" <br>- Fax</em>
+          </div>
+          <div class="carousel-item">
+            <em>"Adam was very professional and efficient. He showed up on time and my windows have never looked better! I have him coming back every 3 months. Completely worth it. I would recommend him to anyone." - Chris</em>
+          </div>
+          <div class="carousel-item">
+            <em>"Adam came and cleaned the interior and exterior of my windows and they are sparkly clean with zero streaks or parks. Perfect in every way! Thank you for being a perfectionist!!!" - Julie</em>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </div>
-  <div class="col-md-1"></div>
-  </div>
-</div>
-
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <p><quote><em>"Very quick and tidy leaving no water drops...only very clean windows. I've become on of his regulars, he'll be back in three months to clean the outside windows." - Bonnie</em></quote></p>
-    </div>
-    <div class="carousel-item">
-      <p><quote><em>"My wife and I always joke that our windows are "High Definition" after Adam gets done!" - Fax</em></quote></p>
-    </div>
-    <div class="carousel-item">
-      <p><quote><em>"Adam was very professional and efficient. He showed up on time and my windows have never looked better! I have him coming back every 3 months. Completely worth it. I would recommend him to anyone." - Chris</em></quote></p>
-    </div>
-    <div class="carousel-item">
-      <p><quote><em>"Adam came and cleaned the interior and exterior of my windows and they are sparkly clean with zero streaks or parks. Perfect in every way! Thank you for being a perfectionist!!!" - Julie</em></quote></p>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 </div>
 
 
