--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-
+    <%= image_tag('bubble_bg.jpg', id: 'background') %>
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <p class="notice"><%= notice %></p>
