Adjusted for basic resonsiveness

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,14 +12,14 @@
             <br>
             <p class="lead">I have impeccable attention to detail so your windows come out streak free and sparkling clean every time. I work on word-of-mouth referrals, so anything less than results you would rave to your friends and family about is unacceptable.</p>
             <hr>
-            <div class="col-md-6 lead contact">
+            <div class="contact">
               <p> Adam Healey</p>
               <p> 801-995-8792 </p>
               <p><a href="mailto:yearroundwindow@gmail.com" class="email">yearroundwindow@gmail.com</a></p>
-            </div>
-            <div class="col-md-6 lead request-quote">
+              </div>
+              <div class="request-quote">
               <%= link_to "Request a Quote", new_quote_path, class: "btn btn-warning btn-block" %>
-            </div>    
+              </div>
           </div>
         </div>
       </div>
