--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,6 @@
 // Global
 .card {
   width: 100%;
-  min-height: 500px;
-  min-width: 1110px;
 }
 
 #background {
@@ -47,15 +45,15 @@ color: white;
 
 // Home Page
 .home-pic {
+  width: 100%;
   border-radius: 5px;
-  margin: 15px 5px 15px 25px;
-
+  margin: auto;
 }
 
 .request-quote{
-  padding: 0px;
-  margin-left: 300px;
-  margin-top: -100px;
+  padding: auto;
+  margin: auto;
+  text-align: center;
 }
 
 .contact {
