--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="card text-center" style="width: 40rem;">
+<div class="card text-center">
   <div class="card-block">
   <h3 class="card-title"> Request a Quote </h3>
   <%= form_with(model: @quotes, local: true) do |f| %>
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="actions">
-      <%= f.submit "Request Quote", class: "btn btn-warning btn-block" %>
+      <%= f.submit "Submit Quote Request", class: "btn btn-warning btn-block" %>
     </div>
     <% end %>
   </div>
