--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 
 <div class="masthead clearfix" id="<%= @fixed_pos %>">
   <div class="inner">
-    <h2 class="masthead-brand">Year Round Window Cleaning</h2>
+    <h2 class="masthead-brand d-flex justify-content-center"><span>Year Round Window Cleaning</span></h2>
     <div class="nav" >
       <nav class="nav nav-tabs" role="tablist">
         <li class="nav-item">
